Update title positions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                     <img src="profile.jpg" alt="Behzad Ousat" class="profile-picture" onerror="this.src='https://ui-avatars.com/api/?name=Behzad+Ousat&size=200&background=3498db&color=fff'">
                 </div>
                 <h1>Behzad Ousat</h1>
-                <h2>PhD Researcher<br>Applied ML Engineer<br>Site Reliability Engineer</h2>
                 <div class="contact-info">
                     <a href="mailto:behzad.ost@gmail.com"><i class="fas fa-envelope"></i> behzad.ost@gmail.com</a>
                     <a href="tel:786-824-6705"><i class="fas fa-phone"></i> 786-824-6705</a>
@@ -42,6 +41,11 @@
         <div class="section-row">
             <section id="summary" class="summary half-section">
                 <h2>Professional Summary</h2>
+                <div class="roles">
+                    <span class="role-title">PhD Researcher</span>
+                    <span class="role-title">Applied ML Engineer</span>
+                    <span class="role-title">Site Reliability Engineer</span>
+                </div>
                 <p>Ph.D. Researcher and Applied ML Engineer with 6+ years of experience as a site reliability/software engineer. Skilled in implementing and deploying ML pipelines, integrating AI into backend services, automating workflows, CI/CD, and monitoring production-grade distributed systems. Experienced in combining ML, software, and infrastructure to create resilient systems. Adaptable across software development, infrastructure operations, and experimental research.</p>
             </section>
 
