Update projects and publications

--- a/index.html
+++ b/index.html
@@ -142,54 +142,56 @@
         <!-- Projects Section -->
     <section id="projects" class="projects">
         <div class="container">
-            <h2>Selected Projects</h2>
-            <div class="project-card">
-                <h3>Analyzing LLM-Based Browser Agents in Captcha Solving</h3>
-                <p>Evaluated popular Captcha defenses against modern LLM agents, exposing limitations in trust mechanisms and detection. Built an automated solver using LLM-based browser agents to simulate human behavior and successfully bypass reCaptcha v3 in real-world deployments.</p>
-            </div>
+            <h2>Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <h3>Analyzing LLM-Based Browser Agents in Captcha Solving</h3>
+                    <p>Evaluated popular Captcha defenses against modern LLM agents, exposing limitations in trust mechanisms and detection. Built an automated solver using LLM-based browser agents to simulate human behavior and successfully bypass reCaptcha v3 in real-world deployments.</p>
+                </div>
 
-            <div class="project-card">
-                <h3>LLM-Powered Clinical Trial Matching</h3>
-                <p>Developed an LLM-driven pipeline for eligibility matching with clinical trial protocols, leveraging Prompt Chaining to process 30K+ trial documents. Implemented Chat-with-PDF feature using RAG for interactive querying.</p>
-            </div>
+                <div class="project-card">
+                    <h3>LLM-Powered Clinical Trial Matching</h3>
+                    <p>Developed an LLM-driven pipeline for eligibility matching with clinical trial protocols, leveraging Prompt Chaining to process 30K+ trial documents. Implemented Chat-with-PDF feature using RAG for interactive querying.</p>
+                </div>
 
-            <div class="project-card">
-                <h3>Analyzing Adversarial Payloads via Large Language Models</h3>
-                <p>Collected and analyzed a corpus of 90K+ payloads from publicly exposed online forms. Performed comprehensive analysis using Open-source Large Language Models for payload classification.</p>
-            </div>
+                <div class="project-card">
+                    <h3>Analyzing Adversarial Payloads via Large Language Models</h3>
+                    <p>Collected and analyzed a corpus of 90K+ payloads from publicly exposed online forms. Performed comprehensive analysis using Open-source Large Language Models for payload classification.</p>
+                </div>
 
-            <div class="project-card">
-                <h3>Investigating Security Challenges in Open-Source Software</h3>
-                <p>Analyzed vulnerability trends across 10+ ecosystems using GitHub Advisory and Snyk.io data. Identified common vulnerability types and compared distribution patterns, with detailed analysis of malicious packages in the NPM ecosystem.</p>
-            </div>
+                <div class="project-card">
+                    <h3>Investigating Security Challenges in Open-Source Software</h3>
+                    <p>Analyzed vulnerability trends across 10+ ecosystems using GitHub Advisory and Snyk.io data. Identified common vulnerability types and compared distribution patterns, with detailed analysis of malicious packages in the NPM ecosystem.</p>
+                </div>
 
-            <div class="project-card">
-                <h3>Real-Time Browser Interaction Modeling</h3>
-                <p>Developed a scalable pipeline for Multi-Modal browser interaction data collection and classification of 1.6B+ artifacts. Published research demonstrating advanced bot detection capabilities.</p>
-                <a href="https://arxiv.org/abs/2412.07005" target="_blank">View Publication</a>
-            </div>
+                <div class="project-card">
+                    <h3>Real-Time Browser Interaction Modeling</h3>
+                    <p>Developed a scalable pipeline for Multi-Modal browser interaction data collection and classification of 1.6B+ artifacts. Published research demonstrating advanced bot detection capabilities.</p>
+                    <a href="https://arxiv.org/abs/2412.07005" target="_blank" class="paper-link">View Publication</a>
+                </div>
 
-            <div class="project-card">
-                <h3>Evaluating Resilience of Behavioral Bot Detection</h3>
-                <p>Implemented Adversarial Machine Learning attacks (FGSM, Genetic Algorithm) to evaluate deep learning model robustness in practical scenarios.</p>
-                <a href="https://dl.acm.org/doi/abs/10.1145/3589335.3651474" target="_blank">View Publication</a>
-            </div>
+                <div class="project-card">
+                    <h3>Evaluating Resilience of Behavioral Bot Detection</h3>
+                    <p>Implemented Adversarial Machine Learning attacks (FGSM, Genetic Algorithm) to evaluate deep learning model robustness in practical scenarios.</p>
+                    <a href="https://dl.acm.org/doi/abs/10.1145/3589335.3651474" target="_blank" class="paper-link">View Publication</a>
+                </div>
 
-            <div class="project-card">
-                <h3>Adversarial Assessment of Text Captchas</h3>
-                <p>Developed Object Detection module using Tensorflow to solve real-world text-based Captchas, achieving 80%+ success rate on samples from 1M+ top websites.</p>
-                <a href="https://dl.acm.org/doi/abs/10.1145/3589334.3645619" target="_blank">View Publication</a>
-            </div>
+                <div class="project-card">
+                    <h3>Adversarial Assessment of Text Captchas</h3>
+                    <p>Developed Object Detection module using Tensorflow to solve real-world text-based Captchas, achieving 80%+ success rate on samples from 1M+ top websites.</p>
+                    <a href="https://dl.acm.org/doi/abs/10.1145/3589334.3645619" target="_blank" class="paper-link">View Publication</a>
+                </div>
 
-            <div class="project-card">
-                <h3>Phishing Websites Detection</h3>
-                <p>Investigated code reuse patterns in 300K+ phishing websites using Semi-Supervised Clustering, enabling scalable detection of malicious websites with similar origins.</p>
-            </div>
+                <div class="project-card">
+                    <h3>Phishing Websites Detection</h3>
+                    <p>Investigated code reuse patterns in 300K+ phishing websites using Semi-Supervised Clustering, enabling scalable detection of malicious websites with similar origins.</p>
+                </div>
 
-            <div class="project-card">
-                <h3>Deep Open Set Analysis for Network Traffic</h3>
-                <p>Built Feature Engineering pipelines for terabytes of PCAP data and implemented Open Set Recognition models in TensorFlow to detect zero-day anomalies in encrypted flows.</p>
-                <a href="https://www.sciencedirect.com/science/article/abs/pii/S221421262300100X" target="_blank">View Publication</a>
+                <div class="project-card">
+                    <h3>Deep Open Set Analysis for Network Traffic</h3>
+                    <p>Built Feature Engineering pipelines for terabytes of PCAP data and implemented Open Set Recognition models in TensorFlow to detect zero-day anomalies in encrypted flows.</p>
+                    <a href="https://www.sciencedirect.com/science/article/abs/pii/S221421262300100X" target="_blank" class="paper-link">View Publication</a>
+                </div>
             </div>
         </div>
     </section>
@@ -209,12 +211,14 @@
                     <h3>WebGuard: Detecting Evasive Web Scanners via a Multi‑Modal Forensics Engine</h3>
                     <p class="authors">B. Ousat, M. Shariatnasab, E. Schafir, F. Shirani, A. Kharraz</p>
                     <p class="venue">Submitted to RAID, 2025</p>
+                    <a href="https://arxiv.org/abs/2412.07005" target="_blank" class="paper-link">View on arXiv</a>
                 </div>
 
                 <div class="publication-item">
                     <h3>Open Source, Open Threats? Investigating Security Challenges in Open-Source Software</h3>
                     <p class="authors">S.A. Akhavani*, B. Ousat*, A. Kharraz</p>
                     <p class="venue">Submitted to ACSAC, 2025</p>
+                    <a href="https://arxiv.org/abs/2506.12995" target="_blank" class="paper-link">View on arXiv</a>
                 </div>
 
                 <div class="publication-item">
@@ -227,24 +231,28 @@
                     <h3>Breaking the Bot Barrier: Evaluating Adversarial AI Against Multi-Modal Defenses</h3>
                     <p class="authors">Behzad Ousat, Dongsheng Luo, Amin Kharraz</p>
                     <p class="venue">ACM Web Conference (WWW), 2024</p>
+                    <a href="https://dl.acm.org/doi/abs/10.1145/3589335.3651474" target="_blank" class="paper-link">View Publication</a>
                 </div>
 
                 <div class="publication-item">
                     <h3>The Matter of Captchas: An Analysis of a Brittle Security Feature on the Modern Web</h3>
                     <p class="authors">B. Ousat, E. Schafir, D. C. Hoang, M. Ali Tofighi, S. Arshad, C. Nguyen, S. Uluagac, A. Kharraz</p>
                     <p class="venue">ACM Web Conference (WWW), 2024</p>
+                    <a href="https://dl.acm.org/doi/abs/10.1145/3589334.3645619" target="_blank" class="paper-link">View Publication</a>
                 </div>
 
                 <div class="publication-item">
                     <h3>An End‑to‑End Analysis of Covid‑Themed Scams in the Wild</h3>
                     <p class="authors">B. Ousat, M. A. Tofighi, A. Kharraz</p>
                     <p class="venue">ASIACCS, 2023</p>
+                    <a href="https://dl.acm.org/doi/abs/10.1145/3579856.3595805" target="_blank" class="paper-link">View Publication</a>
                 </div>
 
                 <div class="publication-item">
                     <h3>An Adaptable Deep Learning‑based Intrusion Detection System to Zero‑day Attacks</h3>
                     <p class="authors">M. Soltani, B. Ousat, M. Jafari Siavoshani, A. H. Jahangir</p>
                     <p class="venue">Journal of Information Security and Applications, 2023</p>
+                    <a href="https://www.sciencedirect.com/science/article/abs/pii/S221421262300100X" target="_blank" class="paper-link">View Publication</a>
                 </div>
             </div>
         </div>
