--- a/index.html
+++ b/index.html
@@ -267,57 +267,89 @@
             <h2>Publications</h2>
             <div class="publication-list">
                 <div class="publication-item">
-                    <h3>Cracking the Web: Analyzing LLM-Based Browsers and Automated Solvers in the Web</h3>
-                    <p class="authors">B. Ousat, L. Rampersaud, D. Bailey, N. Turkmen, S. Ulugac, A. Kharraz</p>
-                    <p class="venue">To be Submitted to IEEE S&P (S&P), 2026</p>
+                    <div class="publication-content">
+                        <h3>Cracking the Web: Analyzing LLM-Based Browsers and Automated Solvers in the Web</h3>
+                        <p class="authors">B. Ousat, L. Rampersaud, D. Bailey, N. Turkmen, S. Ulugac, A. Kharraz</p>
+                    </div>
+                    <div class="publication-meta">
+                        <p class="venue">To be Submitted to IEEE S&P (S&P), 2026</p>
+                    </div>
                 </div>
                 
                 <div class="publication-item">
-                    <h3>WebGuard: Detecting Evasive Web Scanners via a Multi‑Modal Forensics Engine</h3>
-                    <p class="authors">B. Ousat, M. Shariatnasab, E. Schafir, F. Shirani, A. Kharraz</p>
-                    <p class="venue">Submitted to RAID, 2025</p>
-                    <a href="https://arxiv.org/abs/2412.07005" target="_blank" class="paper-link">View on arXiv</a>
+                    <div class="publication-content">
+                        <h3>WebGuard: Detecting Evasive Web Scanners via a Multi‑Modal Forensics Engine</h3>
+                        <p class="authors">B. Ousat, M. Shariatnasab, E. Schafir, F. Shirani, A. Kharraz</p>
+                    </div>
+                    <div class="publication-meta">
+                        <p class="venue">Submitted to RAID, 2025</p>
+                        <a href="https://arxiv.org/abs/2412.07005" target="_blank" class="paper-link">View on arXiv</a>
+                    </div>
                 </div>
 
                 <div class="publication-item">
-                    <h3>Open Source, Open Threats? Investigating Security Challenges in Open-Source Software</h3>
-                    <p class="authors">S.A. Akhavani*, B. Ousat*, A. Kharraz</p>
-                    <p class="venue">Submitted to ACSAC, 2025</p>
-                    <a href="https://arxiv.org/abs/2506.12995" target="_blank" class="paper-link">View on arXiv</a>
+                    <div class="publication-content">
+                        <h3>Open Source, Open Threats? Investigating Security Challenges in Open-Source Software</h3>
+                        <p class="authors">S.A. Akhavani*, B. Ousat*, A. Kharraz</p>
+                    </div>
+                    <div class="publication-meta">
+                        <p class="venue">Submitted to ACSAC, 2025</p>
+                        <a href="https://arxiv.org/abs/2506.12995" target="_blank" class="paper-link">View on arXiv</a>
+                    </div>
                 </div>
 
                 <div class="publication-item">
-                    <h3>EnSolver: Uncertainty-Aware Ensemble Captcha Solvers with Theoretical Guarantees</h3>
-                    <p class="authors">D. C. Hoang, B. Ousat, A. Kharraz, C. V. Nguyen</p>
-                    <p class="venue">Submitted to IEEE TPAMI, 2024</p>
+                    <div class="publication-content">
+                        <h3>EnSolver: Uncertainty-Aware Ensemble Captcha Solvers with Theoretical Guarantees</h3>
+                        <p class="authors">D. C. Hoang, B. Ousat, A. Kharraz, C. V. Nguyen</p>
+                    </div>
+                    <div class="publication-meta">
+                        <p class="venue">Submitted to IEEE TPAMI, 2024</p>
+                    </div>
                 </div>
 
                 <div class="publication-item">
-                    <h3>Breaking the Bot Barrier: Evaluating Adversarial AI Against Multi-Modal Defenses</h3>
-                    <p class="authors">Behzad Ousat, Dongsheng Luo, Amin Kharraz</p>
-                    <p class="venue">ACM Web Conference (WWW), 2024</p>
-                    <a href="https://dl.acm.org/doi/abs/10.1145/3589335.3651474" target="_blank" class="paper-link">View Publication</a>
+                    <div class="publication-content">
+                        <h3>Breaking the Bot Barrier: Evaluating Adversarial AI Against Multi-Modal Defenses</h3>
+                        <p class="authors">Behzad Ousat, Dongsheng Luo, Amin Kharraz</p>
+                    </div>
+                    <div class="publication-meta">
+                        <p class="venue">ACM Web Conference (WWW), 2024</p>
+                        <a href="https://dl.acm.org/doi/abs/10.1145/3589335.3651474" target="_blank" class="paper-link">View Publication</a>
+                    </div>
                 </div>
 
                 <div class="publication-item">
-                    <h3>The Matter of Captchas: An Analysis of a Brittle Security Feature on the Modern Web</h3>
-                    <p class="authors">B. Ousat, E. Schafir, D. C. Hoang, M. Ali Tofighi, S. Arshad, C. Nguyen, S. Uluagac, A. Kharraz</p>
-                    <p class="venue">ACM Web Conference (WWW), 2024</p>
-                    <a href="https://dl.acm.org/doi/abs/10.1145/3589334.3645619" target="_blank" class="paper-link">View Publication</a>
+                    <div class="publication-content">
+                        <h3>The Matter of Captchas: An Analysis of a Brittle Security Feature on the Modern Web</h3>
+                        <p class="authors">B. Ousat, E. Schafir, D. C. Hoang, M. Ali Tofighi, S. Arshad, C. Nguyen, S. Uluagac, A. Kharraz</p>
+                    </div>
+                    <div class="publication-meta">
+                        <p class="venue">ACM Web Conference (WWW), 2024</p>
+                        <a href="https://dl.acm.org/doi/abs/10.1145/3589334.3645619" target="_blank" class="paper-link">View Publication</a>
+                    </div>
                 </div>
 
                 <div class="publication-item">
-                    <h3>An End‑to‑End Analysis of Covid‑Themed Scams in the Wild</h3>
-                    <p class="authors">B. Ousat, M. A. Tofighi, A. Kharraz</p>
-                    <p class="venue">ASIACCS, 2023</p>
-                    <a href="https://dl.acm.org/doi/abs/10.1145/3579856.3595805" target="_blank" class="paper-link">View Publication</a>
+                    <div class="publication-content">
+                        <h3>An End‑to‑End Analysis of Covid‑Themed Scams in the Wild</h3>
+                        <p class="authors">B. Ousat, M. A. Tofighi, A. Kharraz</p>
+                    </div>
+                    <div class="publication-meta">
+                        <p class="venue">ASIACCS, 2023</p>
+                        <a href="https://dl.acm.org/doi/abs/10.1145/3579856.3595805" target="_blank" class="paper-link">View Publication</a>
+                    </div>
                 </div>
 
                 <div class="publication-item">
-                    <h3>An Adaptable Deep Learning‑based Intrusion Detection System to Zero‑day Attacks</h3>
-                    <p class="authors">M. Soltani, B. Ousat, M. Jafari Siavoshani, A. H. Jahangir</p>
-                    <p class="venue">Journal of Information Security and Applications, 2023</p>
-                    <a href="https://www.sciencedirect.com/science/article/abs/pii/S221421262300100X" target="_blank" class="paper-link">View Publication</a>
+                    <div class="publication-content">
+                        <h3>An Adaptable Deep Learning‑based Intrusion Detection System to Zero‑day Attacks</h3>
+                        <p class="authors">M. Soltani, B. Ousat, M. Jafari Siavoshani, A. H. Jahangir</p>
+                    </div>
+                    <div class="publication-meta">
+                        <p class="venue">Journal of Information Security and Applications, 2023</p>
+                        <a href="https://www.sciencedirect.com/science/article/abs/pii/S221421262300100X" target="_blank" class="paper-link">View Publication</a>
+                    </div>
                 </div>
             </div>
         </div>
