--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
             <section id="summary" class="summary half-section">
                 <h2>Professional Summary</h2>
                 <div class="roles">
-                    <span class="role-title">PhD Researcher</span>
+                    <span class="role-title">Ph.D. Researcher</span>
                     <span class="role-title">Applied ML Engineer</span>
                     <span class="role-title">Site Reliability Engineer</span>
+                    <span class="role-title">Software Engineer</span>
                 </div>
                 <p>Ph.D. Researcher and Applied ML Engineer with 6+ years of experience as a site reliability/software engineer. Skilled in implementing and deploying ML pipelines, integrating AI into backend services, automating workflows, CI/CD, and monitoring production-grade distributed systems. Experienced in combining ML, software, and infrastructure to create resilient systems. Adaptable across software development, infrastructure operations, and experimental research.</p>
             </section>
