Fix mobile view

--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
                 <h2>Education</h2>
                 <div class="timeline">
                     <div class="timeline-item">
-                        <div class="date">2022 - 2026</div>
                         <div class="content">
+                            <div class="date">2022 - 2026</div>
                             <h3>Ph.D. Computer Science</h3>
                             <p>Florida International University</p>
                         </div>
                     </div>
                     <div class="timeline-item">
-                        <div class="date">2018 - 2021</div>
                         <div class="content">
+                            <div class="date">2018 - 2021</div>
                             <h3>M.Sc. Computer Engineering</h3>
                             <p>Sharif University of Technology</p>
                         </div>
                     </div>
                     <div class="timeline-item">
-                        <div class="date">2014 - 2018</div>
                         <div class="content">
+                            <div class="date">2014 - 2018</div>
                             <h3>B.Sc. Computer Engineering</h3>
                             <p>University of Tehran</p>
                         </div>
@@ -283,7 +283,10 @@
                     </div>
                     <div class="publication-meta">
                         <p class="venue">Submitted to RAID, 2025</p>
-                        <a href="https://arxiv.org/abs/2412.07005" target="_blank" class="paper-link">View on arXiv</a>
+                        <a href="https://arxiv.org/abs/2412.07005" target="_blank" class="paper-link">
+                            <span class="venue-mobile">Submitted to RAID, 2025</span>
+                            View on arXiv
+                        </a>
                     </div>
                 </div>
 
@@ -294,7 +297,10 @@
                     </div>
                     <div class="publication-meta">
                         <p class="venue">Submitted to ACSAC, 2025</p>
-                        <a href="https://arxiv.org/abs/2506.12995" target="_blank" class="paper-link">View on arXiv</a>
+                        <a href="https://arxiv.org/abs/2506.12995" target="_blank" class="paper-link">
+                            <span class="venue-mobile">Submitted to ACSAC, 2025</span>
+                            View on arXiv
+                        </a>
                     </div>
                 </div>
 
@@ -315,7 +321,10 @@
                     </div>
                     <div class="publication-meta">
                         <p class="venue">ACM Web Conference (WWW), 2024</p>
-                        <a href="https://dl.acm.org/doi/abs/10.1145/3589335.3651474" target="_blank" class="paper-link">View Publication</a>
+                        <a href="https://dl.acm.org/doi/abs/10.1145/3589335.3651474" target="_blank" class="paper-link">
+                            <span class="venue-mobile">ACM Web Conference (WWW), 2024</span>
+                            View Publication
+                        </a>
                     </div>
                 </div>
 
