Add cloud expertise badge

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <div class="learning-path-standalone">
                     <div class="path-header-standalone">
                         <span class="path-title-standalone">Google Cloud Machine Learning Engineer Learning Path</span>
-                        <span class="completion-badge">✅ Completed - 100+ Hours</span>
+                        <span class="progress-badge">🚀 In Progress - 100+ Hours</span>
                     </div>
                     <div class="course-categories">
                         <div class="category-group">
