Add Resume Section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <a href="#honors">Honors</a>
                 <a href="#cloud-skills">Cloud Skills</a>
                 <a href="#skills">Skills</a>
+                <a href="#resume">Resume</a>
             </nav>
         </div>
     </aside>
@@ -555,6 +556,18 @@
                     <h3>Monitoring</h3>
                     <div class="skill-items">Prometheus, Grafana, Graylog, Jaeger Tracing</div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Resume Section -->
+    <section id="resume" class="resume">
+        <div class="container">
+            <h2>Resume</h2>
+            <div class="resume-download">
+                <a href="Behzad Ousat Resume - Oct 25.pdf" download class="download-btn">
+                    <i class="fas fa-download"></i> Download CV
+                </a>
             </div>
         </div>
     </section>
