Add Resume Section

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
             <h2>Resume</h2>
             <div class="resume-download">
                 <a href="Behzad Ousat Resume - Oct 25.pdf" download class="download-btn">
-                    <i class="fas fa-download"></i> Download CV
+                    <i class="fas fa-download"></i> Download
                 </a>
             </div>
         </div>
