Add github profile

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <div class="contact-info">
                     <a href="mailto:behzad.ost@gmail.com"><i class="fas fa-envelope"></i> behzad.ost@gmail.com</a>
                     <a href="https://linkedin.com/in/behzad-ousat" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    <a href="https://github.com/behzad-ost" target="_blank"><i class="fab fa-github"></i> GitHub</a>
                     <a href="https://scholar.google.com/citations?user=QHF_oV4AAAAJ&hl=en&oi=ao" target="_blank"><i class="fas fa-graduation-cap"></i> Google Scholar</a>
                 </div>
             </div>
