Update skill icons

--- a/index.html
+++ b/index.html
@@ -537,27 +537,56 @@
             <div class="skills-grid">
                 <div class="skill-category">
                     <h3>Programming</h3>
-                    <div class="skill-items">Python, Node.JS, Java, C++</div>
+                    <div class="skill-items">
+                        <span class="skill-badge python"><i class="fab fa-python"></i> Python</span>
+                        <span class="skill-badge javascript"><i class="fab fa-node-js"></i> Node.JS</span>
+                        <span class="skill-badge java"><i class="fab fa-java"></i> Java</span>
+                        <span class="skill-badge cpp"><i class="fas fa-code"></i> C++</span>
+                    </div>
                 </div>
                 <div class="skill-category">
                     <h3>Machine Learning</h3>
-                    <div class="skill-items">Keras, Tensorflow, PyTorch, ScikitLearn</div>
+                    <div class="skill-items">
+                        <span class="skill-badge keras"><i class="fas fa-brain"></i> Keras</span>
+                        <span class="skill-badge tensorflow"><i class="fas fa-brain"></i> TensorFlow</span>
+                        <span class="skill-badge pytorch"><i class="fas fa-fire"></i> PyTorch</span>
+                        <span class="skill-badge sklearn"><i class="fas fa-chart-line"></i> Scikit-Learn</span>
+                    </div>
                 </div>
                 <div class="skill-category">
                     <h3>Data Stores</h3>
-                    <div class="skill-items">MongoDB, PostgreSQL, Redis, Pinecone</div>
+                    <div class="skill-items">
+                        <span class="skill-badge mongodb"><i class="fas fa-database"></i> MongoDB</span>
+                        <span class="skill-badge postgresql"><i class="fas fa-database"></i> PostgreSQL</span>
+                        <span class="skill-badge redis"><i class="fas fa-database"></i> Redis</span>
+                        <span class="skill-badge pinecone"><i class="fas fa-cube"></i> Pinecone</span>
+                    </div>
                 </div>
                 <div class="skill-category">
                     <h3>Orchestration</h3>
-                    <div class="skill-items">Github Actions, Kubernetes, Docker, MLFlow</div>
+                    <div class="skill-items">
+                        <span class="skill-badge github"><i class="fab fa-github"></i> GitHub Actions</span>
+                        <span class="skill-badge kubernetes"><i class="fas fa-dharmachakra"></i> Kubernetes</span>
+                        <span class="skill-badge docker"><i class="fab fa-docker"></i> Docker</span>
+                        <span class="skill-badge mlflow"><i class="fas fa-project-diagram"></i> MLFlow</span>
+                    </div>
                 </div>
                 <div class="skill-category">
                     <h3>Cloud Services</h3>
-                    <div class="skill-items">AWS, Google Cloud Platform, Terraform</div>
+                    <div class="skill-items">
+                        <span class="skill-badge aws"><i class="fab fa-aws"></i> AWS</span>
+                        <span class="skill-badge gcp"><i class="fab fa-google"></i> Google Cloud Platform</span>
+                        <span class="skill-badge terraform"><i class="fas fa-layer-group"></i> Terraform</span>
+                    </div>
                 </div>
                 <div class="skill-category">
                     <h3>Monitoring</h3>
-                    <div class="skill-items">Prometheus, Grafana, Graylog, Jaeger Tracing</div>
+                    <div class="skill-items">
+                        <span class="skill-badge prometheus"><i class="fas fa-chart-area"></i> Prometheus</span>
+                        <span class="skill-badge grafana"><i class="fas fa-chart-line"></i> Grafana</span>
+                        <span class="skill-badge graylog"><i class="fas fa-file-alt"></i> Graylog</span>
+                        <span class="skill-badge jaeger"><i class="fas fa-network-wired"></i> Jaeger Tracing</span>
+                    </div>
                 </div>
             </div>
         </div>
